artifacts/macos-x86_64-artifact/dojo.h

struct Controller;
struct OrderBy;
struct Entity;
struct COptionFieldElement;
struct Model;
struct Transaction;
struct TransactionCall;
struct Struct;
struct Token;
struct TokenBalance;
struct Ty;
struct Member;
struct EnumOption;
typedef enum BlockTag {
  Latest,
  Pending,
} BlockTag;
typedef enum CallType {
  Execute,
  ExecuteFromOutside,
} CallType;
typedef enum OrderDirection {
  Asc,
  Desc,
} OrderDirection;
typedef struct FieldElement {
  uint8_t data[32];
} FieldElement;
typedef struct CArrayFieldElement {
  struct FieldElement *data;
  uintptr_t data_len;
} CArrayFieldElement;
typedef struct CArrayController {
  struct Controller *data;
  uintptr_t data_len;
} CArrayController;
typedef enum COptionc_char_Tag {
  Somec_char,
  Nonec_char,
} COptionc_char_Tag;
typedef struct COptionc_char {
  COptionc_char_Tag tag;
  union {
    struct {
      const char *some;
    };
  };
} COptionc_char;
typedef struct CArrayOrderBy {
  struct OrderBy *data;
  uintptr_t data_len;
} CArrayOrderBy;
typedef struct CArrayc_char {
  const char **data;
  uintptr_t data_len;
} CArrayc_char;
typedef struct CArrayEntity {
  struct Entity *data;
  uintptr_t data_len;
} CArrayEntity;
typedef struct CArrayCOptionFieldElement {
  struct COptionFieldElement *data;
  uintptr_t data_len;
} CArrayCOptionFieldElement;
typedef struct KeysClause {
  struct CArrayCOptionFieldElement keys;
  enum PatternMatching pattern_matching;
  struct CArrayc_char models;
} KeysClause;
typedef struct U256 {
  uint8_t data[32];
} U256;
typedef struct Primitive {
  Primitive_Tag tag;
  union {
    struct {
      int8_t i8;
    };
    struct {
      int16_t i16;
    };
    struct {
      int32_t i32;
    };
    struct {
      int64_t i64;
    };
    struct {
      uint8_t i128[16];
    };
    struct {
      uint8_t u8;
    };
    struct {
      uint16_t u16;
    };
    struct {
      uint32_t u32;
    };
    struct {
      uint64_t u64;
    };
    struct {
      uint8_t u128[16];
    };
    struct {
      struct U256 u256;
    };
    struct {
      bool bool_;
    };
    struct {
      struct FieldElement felt252;
    };
    struct {
      struct FieldElement class_hash;
    };
    struct {
      struct FieldElement contract_address;
    };
    struct {
      struct FieldElement eth_address;
    };
  };
} Primitive;
typedef struct CArrayMemberValue {
  struct MemberValue *data;
  uintptr_t data_len;
} CArrayMemberValue;
typedef enum MemberValue_Tag {
  PrimitiveValue,
  String,
  List,
} MemberValue_Tag;
typedef struct MemberValue {
  MemberValue_Tag tag;
  union {
    struct {
      struct Primitive primitive_value;
    };
    struct {
      const char *string;
    };
    struct {
      struct CArrayMemberValue list;
    };
  };
} MemberValue;
typedef struct MemberClause {
  const char *model;
  const char *member;
  enum ComparisonOperator operator_;
  struct MemberValue value;
} MemberClause;
typedef struct CArrayClause {
  struct Clause *data;
  uintptr_t data_len;
} CArrayClause;
typedef struct CompositeClause {
  enum LogicalOperator operator_;
  struct CArrayClause clauses;
} CompositeClause;
typedef enum Clause_Tag {
  HashedKeys,
  Keys,
  CMember,
  Composite,
} Clause_Tag;
typedef struct Clause {
  Clause_Tag tag;
  union {
    struct {
      struct CArrayFieldElement hashed_keys;
    };
    struct {
      struct KeysClause keys;
    };
    struct {
      struct MemberClause c_member;
    };
    struct {
      struct CompositeClause composite;
    };
  };
} Clause;
typedef enum COptionClause_Tag {
  SomeClause,
  NoneClause,
} COptionClause_Tag;
typedef struct COptionClause {
  COptionClause_Tag tag;
  union {
    struct {
      struct Clause some;
    };
  };
} COptionClause;
typedef struct CArrayModel {
  struct Model *data;
  uintptr_t data_len;
} CArrayModel;
typedef struct CArrayTransaction {
  struct Transaction *data;
  uintptr_t data_len;
} CArrayTransaction;
typedef struct COptionu64 {
  COptionu64_Tag tag;
  union {
    struct {
      uint64_t some;
    };
  };
} COptionu64;
typedef struct TransactionFilter {
  struct CArrayFieldElement transaction_hashes;
  struct CArrayFieldElement caller_addresses;
  struct CArrayFieldElement contract_addresses;
  struct CArrayc_char entrypoints;
  struct CArrayFieldElement model_selectors;
  struct COptionu64 from_block;
  struct COptionu64 to_block;
} TransactionFilter;
typedef enum COptionTransactionFilter_Tag {
  SomeTransactionFilter,
  NoneTransactionFilter,
} COptionTransactionFilter_Tag;
typedef struct COptionTransactionFilter {
  COptionTransactionFilter_Tag tag;
  union {
    struct {
      struct TransactionFilter some;
    };
  };
} COptionTransactionFilter;
typedef struct CArrayTransactionCall {
  struct TransactionCall *data;
  uintptr_t data_len;
} CArrayTransactionCall;
typedef struct Transaction {
  struct FieldElement transaction_hash;
  struct FieldElement sender_address;
  struct CArrayFieldElement calldata;
  struct FieldElement max_fee;
  struct CArrayFieldElement signature;
  struct FieldElement nonce;
  uint64_t block_number;
  const char *transaction_type;
  uint64_t block_timestamp;
  struct CArrayTransactionCall calls;
  struct CArrayFieldElement unique_models;
} Transaction;
typedef struct CArrayStruct {
  struct Struct *data;
  uintptr_t data_len;
} CArrayStruct;
typedef struct CArrayToken {
  struct Token *data;
  uintptr_t data_len;
} CArrayToken;
typedef struct CArrayU256 {
  struct U256 *data;
  uintptr_t data_len;
} CArrayU256;
typedef enum COptionU256_Tag {
  SomeU256,
  NoneU256,
} COptionU256_Tag;
typedef struct COptionU256 {
  COptionU256_Tag tag;
  union {
    struct {
      struct U256 some;
    };
  };
} COptionU256;
typedef struct Token {
  struct FieldElement contract_address;
  struct COptionU256 token_id;
  const char *name;
  const char *symbol;
  uint8_t decimals;
  const char *metadata;
} Token;
typedef struct CArrayTokenBalance {
  struct TokenBalance *data;
  uintptr_t data_len;
} CArrayTokenBalance;
typedef struct TokenBalance {
  struct U256 balance;
  struct FieldElement account_address;
  struct FieldElement contract_address;
  struct COptionU256 token_id;
} TokenBalance;
typedef struct Controller {
  struct FieldElement address;
  const char *username;
  uint64_t deployed_at_timestamp;
} Controller;
typedef struct OrderBy {
  const char *field;
  enum OrderDirection direction;
} OrderBy;
typedef struct Entity {
  struct FieldElement hashed_keys;
  struct CArrayStruct models;
} Entity;
typedef enum COptionFieldElement_Tag {
  SomeFieldElement,
  NoneFieldElement,
} COptionFieldElement_Tag;
typedef struct COptionFieldElement {
  COptionFieldElement_Tag tag;
  union {
    struct {
      struct FieldElement some;
    };
  };
} COptionFieldElement;
typedef struct CArrayMember {
  struct Member *data;
  uintptr_t data_len;
} CArrayMember;
typedef struct Struct {
  const char *name;
  struct CArrayMember children;
} Struct;
typedef struct CArrayEnumOption {
  struct EnumOption *data;
  uintptr_t data_len;
} CArrayEnumOption;
typedef struct Enum {
  const char *name;
  uint8_t option;
  struct CArrayEnumOption options;
} Enum;
typedef struct CArrayTy {
  struct Ty *data;
  uintptr_t data_len;
} CArrayTy;
typedef enum Ty_Tag {
  Primitive_,
  Struct_,
  Enum_,
  Tuple_,
  Array_,
  ByteArray,
} Ty_Tag;
typedef struct Ty {
  Ty_Tag tag;
  union {
    struct {
      struct Primitive primitive;
    };
    struct {
      struct Struct struct_;
    };
    struct {
      struct Enum enum_;
    };
    struct {
      struct CArrayTy tuple;
    };
    struct {
      struct CArrayTy array;
    };
    struct {
      const char *byte_array;
    };
  };
} Ty;
typedef struct Model {
  struct Ty schema;
  const char *namespace_;
  const char *name;
  struct FieldElement selector;
  uint32_t packed_size;
  uint32_t unpacked_size;
  struct FieldElement class_hash;
  struct FieldElement contract_address;
  const char *layout;
} Model;
typedef struct TransactionCall {
  struct FieldElement contract_address;
  const char *entrypoint;
  struct CArrayFieldElement calldata;
  enum CallType call_type;
  struct FieldElement caller_address;
} TransactionCall;
typedef struct Member {
  const char *name;
  struct Ty *ty;
  bool key;
} Member;
typedef struct EnumOption {
  const char *name;
  struct Ty *ty;
} EnumOption;
/**
 * Gets account address
 *
 * # Parameters
 * * `account` - Pointer to Account
 *
 * # Returns
 * FieldElement containing the account address
 */
struct FieldElement account_address(struct Account *account);