Assets/Dojo/Runtime/Bindings/dojo.gen.cs


        [CNode(Kind = "Union")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 8)]
        public struct BlockId_ANONYMOUS_FIELD1
        {
            [FieldOffset(0)] // size = 32
            public FieldElement hash;

            [FieldOffset(0)] // size = 8
            public ulong number;

            [FieldOffset(0)] // size = 4
            public BlockTag block_tag;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 1)]
        public struct BlockId_ANONYMOUS_FIELD1_ANONYMOUS_FIELD0
        {
            [FieldOffset(0)] // size = 32
            public FieldElement hash;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 8, Pack = 8)]
        public struct BlockId_ANONYMOUS_FIELD1_ANONYMOUS_FIELD1
        {
            [FieldOffset(0)] // size = 8
            public ulong number;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 4, Pack = 4)]
        public struct BlockId_ANONYMOUS_FIELD1_ANONYMOUS_FIELD2
        {
            [FieldOffset(0)] // size = 4
            public BlockTag block_tag;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayAttributeFilter
        {
            [FieldOffset(0)] // size = 8
            public AttributeFilter* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayCOptionFieldElement
        {
            [FieldOffset(0)] // size = 8
            public COptionFieldElement* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayClause
        {
            [FieldOffset(0)] // size = 8
            public Clause* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayContract
        {
            [FieldOffset(0)] // size = 8
            public Contract* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayContractType
        {
            [FieldOffset(0)] // size = 8
            public ContractType* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayController
        {
            [FieldOffset(0)] // size = 8
            public Controller* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayEntity
        {
            [FieldOffset(0)] // size = 8
            public Entity* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayEnumOption
        {
            [FieldOffset(0)] // size = 8
            public EnumOption* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayFieldElement
        {
            [FieldOffset(0)] // size = 8
            public FieldElement* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayMember
        {
            [FieldOffset(0)] // size = 8
            public Member* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayMemberValue
        {
            [FieldOffset(0)] // size = 8
            public MemberValue* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayModel
        {
            [FieldOffset(0)] // size = 8
            public Model* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayOrderBy
        {
            [FieldOffset(0)] // size = 8
            public OrderBy* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayStruct
        {
            [FieldOffset(0)] // size = 8
            public Struct* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayToken
        {
            [FieldOffset(0)] // size = 8
            public Token* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayTokenBalance
        {
            [FieldOffset(0)] // size = 8
            public TokenBalance* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayTokenContract
        {
            [FieldOffset(0)] // size = 8
            public TokenContract* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayTransaction
        {
            [FieldOffset(0)] // size = 8
            public Transaction* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayTransactionCall
        {
            [FieldOffset(0)] // size = 8
            public TransactionCall* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayTy
        {
            [FieldOffset(0)] // size = 8
            public Ty* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayU256
        {
            [FieldOffset(0)] // size = 8
            public U256* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArrayc_char
        {
            [FieldOffset(0)] // size = 8
            public CString* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 88, Pack = 8)]
        public struct COptionClause
        {
            [FieldOffset(0)] // size = 4
            public COptionClause_Tag tag;

            [FieldOffset(8)] // size = 80
            public Clause some;
        }

        [CNode(Kind = "Union")]
        [StructLayout(LayoutKind.Explicit, Size = 80, Pack = 8)]
        public struct COptionClause_ANONYMOUS_FIELD1
        {
            [FieldOffset(0)] // size = 80
            public Clause some;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 80, Pack = 8)]
        public struct COptionClause_ANONYMOUS_FIELD1_ANONYMOUS_FIELD0
        {
            [FieldOffset(0)] // size = 80
            public Clause some;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 36, Pack = 4)]
        public struct COptionFieldElement
        {
            [FieldOffset(0)] // size = 4
            public COptionFieldElement_Tag tag;

            [FieldOffset(4)] // size = 32
            public FieldElement some;
        }

        [CNode(Kind = "Union")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 1)]
        public struct COptionFieldElement_ANONYMOUS_FIELD1
        {
            [FieldOffset(0)] // size = 32
            public FieldElement some;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 1)]
        public struct COptionFieldElement_ANONYMOUS_FIELD1_ANONYMOUS_FIELD0
        {
            [FieldOffset(0)] // size = 32
            public FieldElement some;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 120, Pack = 8)]
        public struct COptionTransactionFilter
        {
            [FieldOffset(0)] // size = 4
            public COptionTransactionFilter_Tag tag;

            [FieldOffset(8)] // size = 112
            public TransactionFilter some;
        }

        [CNode(Kind = "Union")]
        [StructLayout(LayoutKind.Explicit, Size = 112, Pack = 8)]
        public struct COptionTransactionFilter_ANONYMOUS_FIELD1
        {
            [FieldOffset(0)] // size = 112
            public TransactionFilter some;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 112, Pack = 8)]
        public struct COptionTransactionFilter_ANONYMOUS_FIELD1_ANONYMOUS_FIELD0
        {
            [FieldOffset(0)] // size = 112
            public TransactionFilter some;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 36, Pack = 4)]
        public struct COptionU256
        {
            [FieldOffset(0)] // size = 4
            public COptionU256_Tag tag;

            [FieldOffset(4)] // size = 32
            public U256 some;
        }

        [CNode(Kind = "Union")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 1)]
        public struct COptionU256_ANONYMOUS_FIELD1
        {
            [FieldOffset(0)] // size = 32
            public U256 some;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 1)]
        public struct COptionU256_ANONYMOUS_FIELD1_ANONYMOUS_FIELD0
        {
            [FieldOffset(0)] // size = 32
            public U256 some;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct COptionc_char
        {
            [FieldOffset(0)] // size = 4
            public COptionc_char_Tag tag;

            [FieldOffset(8)] // size = 8
            public CString some_;
